# rust-practice

./: .gitignore  Cargo.toml  README.md  log.yml
district_data/: 100000.1.json  110000.1.json  110101.1.json  110102.1.json  110105.1.json  110106.1.json  110107.1.json  110108.1.json  110109.1.json  510000.1.json  510100.1.json  510300.1.json  510400.1.json  510500.1.json  510600.1.json  510700.1.json  510800.1.json  510900.1.json
src/: lib.rs  main.rs  schema.rs
src/data_build/: district_builder.rs  mod.rs
src/district/: mod.rs  spider.rs
src/dto/: response.rs
src/test_sql/: mod.rs  sql_helper.rs  store.rs
