[package]
name = "rust-practice"
version = "0.1.0"
authors = ["peter <14699454@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.14"
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.5"
log4rs = { version = "0.10.0" , feature = "default"}
log = "0.4.0"
