[package]
name = "rust-practice"
version = "0.1.0"
authors = ["peter <14699454@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.14"
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.5"
log4rs = { version = "0.10.0" , feature = "default"}
log = "0.4.0"
hyper = "0.13"
serde_derive = "1.0"
serde_json = "1.0"
bytes = "0.5"
encoding = "0.2"

# async
tokio = { version = "0.2", features = ["full"] }

# mysql orm
diesel = { version = "1.4.0", features = ["mysql","chrono"] }
dotenv = "0.10"
chrono = "0.4"
